Fixed navigation overflow and create footer

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,3 +1,9 @@
+.nav-container {
+    @media (min-width: 1024px) {
+        padding-top: 90px;
+    }
+}
+
 .nav {
     display: flex;
     flex-direction: row;
@@ -11,7 +17,7 @@
     left: 0;
 
     @media (min-width: 1024px) {
-        margin: 90px 0;
+        // margin: 90px 0;
         position: sticky;
         top: 0;
     }
@@ -58,6 +64,7 @@
             transform: none;
             flex-shrink: 10;
             transition: none;
+            margin-right: 50px;
         }
     }
 
