--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,3 +39,23 @@ header {
         }
     }
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000;
+    color: #4D4D4D;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: 700;
+    letter-spacing: 1.2px;
+    font-size: 14px;
+    padding: 2px 0;
+
+    @media (min-width: 1024px) {
+        font-size: 18px;
+        padding: 10px 0;
+    }
+}
