--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,12 +12,12 @@
 body {
     font-family: 'Varela', sans-serif;
     min-height: 100vh;
-    height: 200vh;
+    height: 100vh;
     background-color: #4d4d4d;
 }
 
 #root {
-    width: 100vw;
-    min-height: 100vh;
+    height: 100%;
     min-height: 100%;
+
 }
